feat: added header section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+    <header>
+        <div>
+            <img class="header-logo" src="img/Toboolist-logo.jpg" alt="Toboolist-logo">
+        </div>
+    </header>
 </body>
 
 </html>
