feat: added main structure

--- a/index.html
+++ b/index.html
@@ -14,6 +14,73 @@
             <img class="header-logo" src="img/Toboolist-logo.jpg" alt="Toboolist-logo">
         </div>
     </header>
+
+    <main>
+        <div class="button-container">
+            <input type="button" class="button" value="Add Task">
+            <input type="button" class="button" value="Add Section">
+        </div>
+        <div class="todo-container">
+            <div class="todo-section">
+                <h3> &dtrif; New Task</h3>
+                <div class="todo-body">
+                    <P class="icon">&check;</P>
+                    <p>Quaterly Newsletter</p>
+                    <p>Editorial</p>
+                </div>
+            </div>
+
+            <div class="todo-section">
+                <h3> &dtrif; New Task</h3>
+                <div class="todo-body">
+                    <P class="icon">&check;</P>
+                    <p>Quaterly Newsletter</p>
+                    <p>Editorial</p>
+                </div>
+                <div class="todo-body">
+                    <P class="icon">&check;</P>
+                    <p>Quaterly Newsletter</p>
+                    <p>Editorial</p>
+                </div>
+                <div class="todo-body">
+                    <P class="icon">&check;</P>
+                    <p>Quaterly Newsletter</p>
+                    <p>Editorial</p>
+                </div>
+                <div class="todo-body">
+                    <P class="icon">&check;</P>
+                    <p>Quaterly Newsletter</p>
+                    <p>Editorial</p>
+                </div>
+            </div>
+
+            <div class="todo-section">
+                <h3> &dtrif; New Task</h3>
+                <div class="todo-body">
+                    <P class="icon">&check;</P>
+                    <p>Quaterly Newsletter</p>
+                    <p>Editorial</p>
+                </div>
+                <div class="todo-body">
+                    <P class="icon">&check;</P>
+                    <p>Quaterly Newsletter</p>
+                    <p>Editorial</p>
+                </div>
+                <div class="todo-body">
+                    <P class="icon">&check;</P>
+                    <p>Quaterly Newsletter</p>
+                    <p>Editorial</p>
+                </div>
+                <div class="todo-body">
+                    <P class="icon">&check;</P>
+                    <p>Quaterly Newsletter</p>
+                    <p>Editorial</p>
+                </div>
+            </div>
+
+
+
+    </main>
 </body>
 
 </html>
