feat: added lable rules

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="todo-body">
                     <P class="icon">&check;</P>
                     <p>Quaterly Newsletter</p>
-                    <p>Editorial</p>
+                    <p class="label">Editorial</p>
                 </div>
             </div>
 
@@ -35,22 +35,22 @@
                 <div class="todo-body">
                     <P class="icon">&check;</P>
                     <p>Quaterly Newsletter</p>
-                    <p>Editorial</p>
+                    <p class="label">Editorial</p>
                 </div>
                 <div class="todo-body">
                     <P class="icon">&check;</P>
                     <p>Quaterly Newsletter</p>
-                    <p>Editorial</p>
+                    <p class="label">Editorial</p>
                 </div>
                 <div class="todo-body">
                     <P class="icon">&check;</P>
                     <p>Quaterly Newsletter</p>
-                    <p>Editorial</p>
+                    <p class="label">Editorial</p>
                 </div>
                 <div class="todo-body">
                     <P class="icon">&check;</P>
                     <p>Quaterly Newsletter</p>
-                    <p>Editorial</p>
+                    <p class="label">Editorial</p>
                 </div>
             </div>
 
@@ -59,22 +59,22 @@
                 <div class="todo-body">
                     <P class="icon">&check;</P>
                     <p>Quaterly Newsletter</p>
-                    <p>Editorial</p>
+                    <p class="label">Editorial</p>
                 </div>
                 <div class="todo-body">
                     <P class="icon">&check;</P>
                     <p>Quaterly Newsletter</p>
-                    <p>Editorial</p>
+                    <p class="label">Editorial</p>
                 </div>
                 <div class="todo-body">
                     <P class="icon">&check;</P>
                     <p>Quaterly Newsletter</p>
-                    <p>Editorial</p>
+                    <p class="label">Editorial</p>
                 </div>
                 <div class="todo-body">
                     <P class="icon">&check;</P>
                     <p>Quaterly Newsletter</p>
-                    <p>Editorial</p>
+                    <p class="label">Editorial</p>
                 </div>
             </div>
 
