feat: addedd color rules

--- a/index.html
+++ b/index.html
@@ -17,64 +17,63 @@
 
     <main>
         <div class="button-container">
-            <input type="button" class="button" value="Add Task">
+            <input type="button" class="button pressed" value="Add Task">
             <input type="button" class="button" value="Add Section">
         </div>
         <div class="todo-container">
             <div class="todo-section">
                 <h3> &dtrif; New Task</h3>
                 <div class="todo-body">
-                    <P class="icon">&check;</P>
+                    <P class="icon tick">&check;</P>
                     <p>Quaterly Newsletter</p>
-                    <p class="label">Editorial</p>
+                    <p class="label editorial">Editorial</p>
                 </div>
             </div>
 
             <div class="todo-section">
-                <h3> &dtrif; New Task</h3>
+                <h3> &dtrif; Today</h3>
                 <div class="todo-body">
-                    <P class="icon">&check;</P>
-                    <p>Quaterly Newsletter</p>
-                    <p class="label">Editorial</p>
+                    <P class="icon tick">&check;</P>
+                    <p>Recruiting blog post</p>
+                    <p class="label editorial">Editorial</p>
                 </div>
                 <div class="todo-body">
-                    <P class="icon">&check;</P>
-                    <p>Quaterly Newsletter</p>
-                    <p class="label">Editorial</p>
+                    <P class="icon tick">&check;</P>
+                    <p>Mobile app launch</p>
+                    <p class="label q1-goals">Q1 Goals</p>
                 </div>
                 <div class="todo-body">
-                    <P class="icon">&check;</P>
-                    <p>Quaterly Newsletter</p>
-                    <p class="label">Editorial</p>
+                    <P class="icon cross">&cross;</P>
+                    <p>Interview Jhon H.</p>
+                    <p class="label recruiting">Recruiting</p>
                 </div>
                 <div class="todo-body">
-                    <P class="icon">&check;</P>
-                    <p>Quaterly Newsletter</p>
-                    <p class="label">Editorial</p>
+                    <P class="icon tick">&check;</P>
+                    <p>Summit update to mobile storefronts</p>
+                    <p class="label mobile">Mobile</p>
                 </div>
             </div>
 
             <div class="todo-section">
-                <h3> &dtrif; New Task</h3>
+                <h3> &dtrif; Upcoming</h3>
                 <div class="todo-body">
-                    <P class="icon">&check;</P>
-                    <p>Quaterly Newsletter</p>
-                    <p class="label">Editorial</p>
+                    <P class="icon cross">&cross;</P>
+                    <p>Schedule meeting with Alex</p>
                 </div>
                 <div class="todo-body">
-                    <P class="icon">&check;</P>
-                    <p>Quaterly Newsletter</p>
-                    <p class="label">Editorial</p>
+                    <P class="icon tick">&check;</P>
+                    <p>Homepage refresh</p>
+                    <p class="label website">Website</p>
                 </div>
                 <div class="todo-body">
-                    <P class="icon">&check;</P>
-                    <p>Quaterly Newsletter</p>
-                    <p class="label">Editorial</p>
+                    <P class="icon tick">&check;</P>
+                    <p>Onboards new Sales team member</p>
+                    <p class="label sales">Sales</p>
                 </div>
                 <div class="todo-body">
-                    <P class="icon">&check;</P>
-                    <p>Quaterly Newsletter</p>
-                    <p class="label">Editorial</p>
+                    <P class="icon tick">&check;</P>
+                    <p>Review editorial calendar</p>
+                    <p class="label editorial">Editorial</p>
                 </div>
             </div>
 
