feat: added comments

--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
 </head>
 
 <body>
+    <!--Intestazione pagina con logo-->
     <header>
         <div>
             <img class="header-logo" src="img/Toboolist-logo.jpg" alt="Toboolist-logo">
         </div>
     </header>
 
+    <!--Corpo pagina con to do list-->
     <main>
+        <!-- sezione bottoni -->
         <div class="button-container">
             <input type="button" class="button pressed" value="Add Task">
             <input type="button" class="button" value="Add Section">
         </div>
+        <!-- sezione to do new task -->
         <div class="todo-container">
             <div class="todo-section">
                 <h3> &dtrif; New Task</h3>
@@ -33,6 +37,7 @@
                 </div>
             </div>
 
+            <!-- sezione to do today -->
             <div class="todo-section">
                 <h3> &dtrif; Today</h3>
                 <div class="todo-body">
@@ -57,6 +62,7 @@
                 </div>
             </div>
 
+            <!-- sezione to do upcoming -->
             <div class="todo-section">
                 <h3> &dtrif; Upcoming</h3>
                 <div class="todo-body">
@@ -79,9 +85,7 @@
                     <p class="label editorial">Editorial</p>
                 </div>
             </div>
-
-
-
+        </div>
     </main>
 </body>
 
